<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/murasyou"/>

	<View
		android:background="?android:attr/dividerVertical"
		android:layout_height="1dp"
		android:layout_width="match_parent"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/information"
		android:layout_gravity="center"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/ip"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/port"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/owner"/>

	<View
		android:background="?android:attr/dividerVertical"
		android:layout_height="1dp"
		android:layout_width="match_parent"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/sites"/>

	<Button
		style="?android:attr/buttonBarButtonStyle"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/community"
		android:id="@+id/community"/>

	<Button
		style="?android:attr/buttonBarButtonStyle"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/wiki"
		android:id="@+id/wiki"/>

	<View
		android:background="?android:attr/dividerVertical"
		android:layout_height="1dp"
		android:layout_width="match_parent"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/serverState"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content"
		android:text="Pinging..."
		android:id="@+id/serverstat"/>
</LinearLayout>

